Kubernetes/k8_services.yaml
apiVersion: v1
kind: apiVersion: v1
kind: Service
metadata:
  name: my_service
  spec:
    selector: 
      name: myapp
      protocol: TCP
      port: 80
      targetport: 5432



---
